--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<!-- This is a web application -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
