--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ server:
 #h2
 spring:
   profiles: h2
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   datasource:
     initialization-mode: always
     #jdbc-url: jdbc:h2:mem:testdb
