--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+
         {
             "type": "java",
-            "name": "Debug (Launch) - Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
-        {
-            "type": "java",
-            "name": "Debug (Launch)-MainApplication<qms.server>",
+            "name": "qms.server",
             "request": "launch",
             "mainClass": "qms.MainApplication",
             "projectName": "qms.server"
